# url-shorter

./: .gitignore  Cargo.toml
src/: config.rs  db.rs  error.rs  main.rs  models.rs  shortcode.rs
src/routes/: create.rs  delete.rs  mod.rs  redirect.rs  stats.rs
